--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -10,9 +10,9 @@
     <hi>Ini Header</hi>
     <nav>
         <ui>
-            <li><a href="#home">Beranda</a>"></a></li>
+            <li><a href="#home">Beranda</a></a></li>
             <li><a href="#about">Tentang </a></li>
-            <li><a href="#Contact">kontak</a></li>
+            <li><a href="#contact">kontak</a></li>
         </ui>
     </nav>
   </header>
