--- a/pertemuan-02/emmet.html
+++ b/pertemuan-02/emmet.html
@@ -23,7 +23,18 @@
     </section>
     <section Id="about">
         <h2>Tentang kami</h2>
-        <p>HTML digunakan untuk membuat struktur halaman web.</p>
+        <p>Nim                 :25225OOO69</P> 
+        <P>Nama                :Khailla</P>
+        <p>Tempat Lahir        :Desa Tanjung Sangkar</p> 
+        <p>Tanggal lahir       :13-O6-2OO7</p>       
+        <p>Hoby                :Memasak</p>
+        <p>pasangan            :jomblo hapy</p>
+        <p>Perkerjaan          :mencari usaha</p>
+        <p>Nama Ayah           :Martin</p>
+        <p>Nama Ibu            :Ernawati</p>
+        <P>Nama Kakak          :Eliza dan Vicky</P>
+        &#128525; &#128525;</p>
+  
     </section>
     <section Id="contact">
         <h2>Kontak kami</h2>
