copy emmet.html (pertemuan-02) ke index.html (pertemuan-03)

--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -23,16 +23,16 @@
     </section>
     <section Id="about">
         <h2>Tentang kami</h2>
-        <p>Nim                 :25225OOO69</P> 
-        <P>Nama                :Khailla</P>
-        <p>Tempat Lahir        :Desa Tanjung Sangkar</p> 
-        <p>Tanggal lahir       :13-O6-2OO7</p>       
-        <p>Hoby                :Memasak</p>
-        <p>pasangan            :jomblo hapy</p>
-        <p>Perkerjaan          :mencari usaha</p>
-        <p>Nama Ayah           :Martin</p>
-        <p>Nama Ibu            :Ernawati</p>
-        <P>Nama Kakak          :Eliza dan Vicky</P>
+        <p><strong>Nim                 :</strong>25225OOO69</P> 
+        <P><strong>Nama                :</strong>Khailla</P>
+        <p><strong>Tempat Lahir        :</strong>Desa Tanjung Sangkar</p> 
+        <p><strong>Tanggal lahir       :</strong>13-O6-2OO7</p>       
+        <p><strong>Hoby                :</strong>Memasak</p>
+        <p><strong>pasangan            :</strong>jomblo hapy</p>
+        <p><strong>Perkerjaan          :</strong>smencari usaha</p>
+        <p><strong>Nama Ayah           :</strong>Martin</p>
+        <p><strong>Nama Ibu            :</strong>Ernawati</p>
+        <P><strong>Nama Kakak          :</strong>Eliza dan Vicky</P>
         &#128525; &#128525;</p>
   
     </section>
@@ -42,7 +42,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Yohanes setiawan japriadi [0344300002]</p>
+    <p>&copy; 2025 Khailla [2522500069]</p>
   </footer>
 </body>
 </html>
