--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-  <header>
-    <hi>Ini Header</hi>
+<style>
+  #about {
+    background-color: aquamarine;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 700px;
+    margin: 20px auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
     <nav>
         <ui>
             <li><a href="#home">Beranda</a></a></li>
@@ -39,7 +46,7 @@
     <section Id="contact">
         <h2>Kontak kami</h2>
         <form action="" method="GET"
-        <label for="txtNama">Nama:</label>
+        <label for="txtNama">Nama</label>
         <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required autocomplete="name">
       
       </label for="txtPesan">Pesan:</label>
