--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -25,6 +25,15 @@
         padding: 6px 0;
         border-bottom: 1px solid;
       }
+      
+      #about strong{
+        min-width: 100px;
+        color: blue;
+        font-weight: 600;
+        text-align: right;
+        padding-right: 16px;
+        flex-shrink: 0;
+      }
     </style>
     <section Id="about">
         <h2>Tentang kami</h2>
