--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -34,6 +34,17 @@
         padding-right: 16px;
         flex-shrink: 0;
       }
+      @media (max-width: 600px) {
+        #about p {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+        #about strong {
+          text-align: left;
+          padding-right: 0px;
+          margin-bottom: 2px;
+        }
+      }
     </style>
     <section Id="about">
         <h2>Tentang kami</h2>
