--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -9,6 +9,7 @@
       max-width: 700px;
       margin: 20px auto;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      text-align: justify;
       }
       #about h2 {
         color: blue;
@@ -24,6 +25,8 @@
         margin: 0px;
         padding: 6px 0;
         border-bottom: 1px solid;
+
+        
       }
       
       #about strong{
