--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -61,12 +61,42 @@
         <p><strong>Nama Ayah           :</strong>Martin</p>
         <p><strong>Nama Ibu            :</strong>Ernawati</p>
         <P><strong>Nama Kakak          :</strong>Eliza dan Vicky</P>
-        &#128525; &#128525;</p>
+        <p>&#128525; &#128525;</p>
   
     </section>
+
+<style>
+  
+#contact {
+background-color: aqua;
+border-radius: 8px;
+padding: 25px;
+max-width: 400px;
+margin: 50px auto;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+</style>
+    
     <section Id="contact">
         <h2>Kontak kami</h2>
-        <p>Contoh form</p>
+        <form action="">
+          <label for="txtNama">Nama:</label>
+          <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required autocomplete="name">
+
+          <label for="txtEmail">Email:</label>
+          <input type="text" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email">
+
+          <label for="txtPesan">Pesan:</label>
+          <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda... required"></textarea>
+
+          <button type="submit">Kirim</button>
+          <button type="reset">Batal</button>
+        
+        </form>
     </section>
   </main>
   <footer>
