--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -66,7 +66,7 @@
     </section>
 
 <style>
-  
+
 #contact {
 background-color: aqua;
 border-radius: 8px;
@@ -76,6 +76,11 @@ margin: 50px auto;
 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+#contact h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
 
 
 
