--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -83,6 +83,12 @@ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #444;
+}
 
 </style>
     
