--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -90,6 +90,18 @@ label {
   color: #444;
 }
 
+input[type="text"],
+  input[type="email"],
+    input[type="Pesan"],
+    textarea{
+      width: 100px;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid;
+      border-radius: 4px;
+      transition: border 0.3s;
+    }
+
 </style>
     
     <section Id="contact">
