--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -99,7 +99,18 @@ input[type="text"],
       margin-bottom: 15px;
       border: 1px solid;
       border-radius: 4px;
-      transition: border 0.3s;
+      border-color: #5a67d8;
+      outline: none;
+    }
+    button[type="submit"],
+    button[type="reset"] {
+      width: 100%;
+      padding: 12px;
+      background-color: #5a67d8;
+      color: aquamarine;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
     }
 
 </style>
