--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -68,11 +68,11 @@
 <style>
 
 #contact {
-background-color: aqua;
-border-radius: 8px;
-padding: 25px;
-max-width: 400px;
-margin: 50px auto;
+background-color: rgb(216, 205, 47);
+border-radius: 10px;
+padding: 20px;
+max-width: 700px;
+margin: 30px auto;
 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -82,37 +82,47 @@ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   color: rgb(0, 0, 0);
 }
 
+form{ display: flex;
+  flex-direction: column;
+}
 
 label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #444;
+  color: #030303;
 }
 
 input[type="text"],
   input[type="email"],
     input[type="Pesan"],
     textarea{
-      width: 100px;
+      width: 700px;
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid;
       border-radius: 4px;
-      border-color: #5a67d8;
+      border-color: #000000;
       outline: none;
     }
     button[type="submit"],
+
     button[type="reset"] {
       width: 100%;
       padding: 12px;
       background-color: #5a67d8;
-      color: aquamarine;
+      color: rgb(8, 8, 8);
       border: none;
       border-radius: 4px;
       font-size: 16px;
     }
 
+    button[type="submit"]:hover {
+      background-color:blue
+    }
+button[type="reset"]:hover {
+  background-color:rgb(11, 100, 136)
+}
 </style>
     
     <section Id="contact">
@@ -125,7 +135,7 @@ input[type="text"],
           <input type="text" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email">
 
           <label for="txtPesan">Pesan:</label>
-          <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda... required"></textarea>
+          <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
 
           <button type="submit">Kirim</button>
           <button type="reset">Batal</button>
@@ -133,8 +143,13 @@ input[type="text"],
         </form>
     </section>
   </main>
+  <style>
+    footer p {
+      text-align: center;
+    }
+  </style>
   <footer>
-    <p>&copy; 2025 Yohanes setiawan japriadi [0344300002]</p>
+    <p>&copy; 2025 Khailla [2522500069]</p>
   </footer>
 </body>
 </html>
