--- a/pertemuan-03/index.html
+++ b/pertemuan-03/index.html
@@ -1,6 +1,10 @@
 
-    <title> Judul halaman </title>
-    <style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+     <style>
       #about {
 
       background-color: aquamarine;
@@ -37,35 +41,6 @@
         padding-right: 16px;
         flex-shrink: 0;
       }
-      @media (max-width: 600px) {
-        #about p {
-          flex-direction: column;
-          align-items: flex-start;
-        }
-        #about strong {
-          text-align: left;
-          padding-right: 0px;
-          margin-bottom: 2px;
-        }
-      }
-    </style>
-    <section Id="about">
-        <h2>Tentang kami</h2>
-        <p><strong>Nim                 :</strong>25225OOO69</P> 
-        <P><strong>Nama                :</strong>Khailla</P>
-        <p><strong>Tempat Lahir        :</strong>Desa Tanjung Sangkar</p> 
-        <p><strong>Tanggal lahir       :</strong>13-O6-2OO7</p>       
-        <p><strong>Hoby                :</strong>Memasak</p>
-        <p><strong>pasangan            :</strong>jomblo hapy</p>
-        <p><strong>Perkerjaan          :</strong>smencari usaha</p>
-        <p><strong>Nama Ayah           :</strong>Martin</p>
-        <p><strong>Nama Ibu            :</strong>Ernawati</p>
-        <P><strong>Nama Kakak          :</strong>Eliza dan Vicky</P>
-        <p>&#128525; &#128525;</p>
-  
-    </section>
-
-<style>
 
 #contact {
 background-color: rgb(216, 205, 47);
@@ -120,22 +95,67 @@ input[type="text"],
     button[type="submit"]:hover {
       background-color:blue
     }
-button[type="reset"]:hover {
-  background-color:rgb(11, 100, 136)
-}
-</style>
-    
+  button[type="reset"]:hover {
+    background-color:rgb(11, 100, 136)
+  }
+
+      @media (max-width: 600px) {
+        #about p {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+        #about strong  {
+          text-align: left;
+          padding-right: 0px;
+          margin-bottom: 2px;
+        }
+      }
+    </style>
+
+</head>
+<body>
+  <header>
+    <hi>Ini Header</hi>
+    <nav>
+        <ui>
+            <li><a href="#home">Beranda</a></a></li>
+            <li><a href="#about">Tentang </a></li>
+            <li><a href="#contact">kontak</a></li>
+        </ui>
+    </nav>
+  </header>
+  <main>
+    <section Id="home">
+        <h2>Selamat Datang</h2>
+        <p>ini contoh paragraf HTML.</p>
+    </section>
+   
+    <section Id="about">
+        <h2>Tentang kami</h2>
+        <p><strong>Nim                 :</strong>25225OOO69</P> 
+        <P><strong>Nama                :</strong>Khailla</P>
+        <p><strong>Tempat Lahir        :</strong>Desa Tanjung Sangkar</p> 
+        <p><strong>Tanggal lahir       :</strong>13-O6-2OO7</p>       
+        <p><strong>Hoby                :</strong>Memasak</p>
+        <p><strong>pasangan            :</strong>jomblo hapy</p>
+        <p><strong>Perkerjaan          :</strong>smencari usaha</p>
+        <p><strong>Nama Ayah           :</strong>Martin</p>
+        <p><strong>Nama Ibu            :</strong>Ernawati</p>
+        <P><strong>Nama Kakak          :</strong>Eliza dan Vicky</P>
+        <p>&#128525; &#128525;</p>
+  
+    </section>
     <section Id="contact">
         <h2>Kontak kami</h2>
         <form action="">
-          <label for="txtNama">Nama:</label>
-          <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required autocomplete="name">
+          <label for="txtNama"><span>Nama:</span>
+          <input type="text" id="txtNama" name="txtNama" placeholder="Masukkan nama" required autocomplete="name"></label>
 
-          <label for="txtEmail">Email:</label>
-          <input type="text" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email">
+          <label for="txtEmail"><span>Email:</span>
+          <input type="text" id="txtEmail" name="txtEmail" placeholder="Masukkan email" required autocomplete="email"></label>
 
-          <label for="txtPesan">Pesan:</label>
-          <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea>
+          <label for="txtPesan"><span>Pesan:</span>
+          <textarea id="txtPesan" name="txtPesan" rows="4" placeholder="Tulis pesan anda..." required></textarea></label>
 
           <button type="submit">Kirim</button>
           <button type="reset">Batal</button>
