--- a/pertemuan-04/index.html
+++ b/pertemuan-04/index.html
@@ -103,6 +103,12 @@
   }
 
       @media (max-width: 600px) {
+        header {
+         padding: 16px;
+         position: sticky;
+         top: 0;
+         z-index: 1000;
+        }
         #about p, #contact label {
           flex-direction: column;
           align-items: flex-start;
