styling nav mobile

--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -102,7 +102,21 @@
     background-color:rgb(11, 100, 136)
   }
 
-      @media (max-width: 600px) {
+      @media (max-width: 600px){
+.menu-toggle  {
+  display: block;
+  position: absolute;
+  left: 16px;
+  top: 8px;
+}
+ nav {
+  display: none;
+  flex-direction: column;
+  background:  #003366;
+  width: 100%;
+  padding: 5px 0;
+ }
+
         header {
          padding: 16px;
          position: sticky;
