--- a/pertemuan-05/index.html
+++ b/pertemuan-05/index.html
@@ -10,12 +10,12 @@
 <body>
   <header>
     <h1>Ini Header</h1>
-    <button class="menu-toggle" id="'menu-toggle" aria-table="toggle Navigation">
+    <button class="menu-toggle" id="menutoggle" aria-table="toggle Navigation">
       &#9776;
     </button>
     <nav>
         <ul>
-            <li><a href="#home">Beranda</a></a></li>
+            <li><a href="#home">Beranda</a></li>
             <li><a href="#about">Tentang </a></li>
             <li><a href="#contact">kontak</a></li>
         </ul>
